<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chiboy.quizapp.MainActivity">

    <LinearLayout

        android:id="@+id/activity_main"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:padding="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView

            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/naija"/>

        <TextView

            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_much"
            android:textSize="20sp"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView

            android:id="@+id/take_quiz_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_test"
            android:textSize="16sp"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/independence"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/correctAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/correct_Answer_1"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"   />

        <CheckBox
            android:id="@+id/wrongAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/wrong_Answer_1"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"
        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/finance"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/wrongAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/correct_Answer_2"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"    />

        <CheckBox
            android:id="@+id/correctAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/wrong_Answer_2"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/vice_president"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/correctAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/correct_Answer_3"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/wrongAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/wrong_Answer_3"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/states"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/correctAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/correct_Answer_4"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/wrongAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/wrong_Answer_4"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/president"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/wrongAnswer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/correct_Answer_5"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/correctAnswer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/wrong_Answer_5"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submit"
            android:gravity="center_horizontal"
            android:text="@string/order" />


    </LinearLayout>
</ScrollView>
